<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent" 
    android:orientation="vertical"
    android:background="@drawable/usermgr"
    >
    
<TextView 
    android:id="@+id/userMgrTitle"
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:layout_gravity="center_horizontal" 
    android:text="用户管理"
    android:textColor="@android:color/black"
    android:textSize="26dip"
    android:layout_marginTop="10sp"
/>


<Button 
    android:layout_height="45sp" 
    android:layout_width="fill_parent" 
    android:text="@string/modifyPassword" 
    android:id="@+id/modifyPassword"
    android:layout_marginTop="70sp"
    android:layout_marginBottom="5sp"
    android:layout_marginLeft="5sp"
    android:layout_marginRight="5sp"
    android:layout_alignParentLeft="true"
    android:background="#9EA7AB"
    >
</Button>
   
<EditText 
    android:textColor="@drawable/gaoliang"
    android:layout_height="wrap_content"
    android:layout_width="200sp"
    android:id="@+id/oldpasswordText"
    android:singleLine="true"
    android:hint="请输入原始密码"
    android:layout_marginRight="5sp"
    android:layout_alignParentRight="true"
    android:layout_below="@id/modifyPassword"
    android:background="@android:drawable/edit_text"
   />

<TextView 
    android:id="@+id/oldpassword"
    android:layout_width="200sp"
    android:layout_height="wrap_content"
    android:text="原始密码:"
    android:textColor="@android:color/black"
    android:textSize="20dip"
    android:layout_marginLeft="10sp"
    android:layout_below="@id/modifyPassword"
    android:layout_alignTop="@id/oldpasswordText"
    android:paddingTop="7dip"
    android:layout_toLeftOf="@id/oldpasswordText"
    />

<EditText 
    android:textColor="@drawable/gaoliang"
    android:layout_height="wrap_content"
    android:layout_width="200sp"
    android:id="@+id/newPasswordText"
    android:singleLine="true"
    android:hint="请输入新密码"
    android:layout_marginRight="5sp"
    android:password="true"
    android:layout_below="@id/oldpasswordText"
    android:layout_alignParentRight="true"
    android:background="@android:drawable/edit_text"
   />
<TextView 
    android:id="@+id/newpassword"
    android:layout_width="200sp"
    android:layout_height="wrap_content"
    android:text="输入新密码:"
    android:layout_marginLeft="10sp"
    android:textColor="@android:color/black"
    android:textSize="20dip"
    android:layout_alignTop="@id/newPasswordText"
    android:paddingTop="7dip"
    android:layout_toLeftOf="@id/newPasswordText"/>
    
<EditText 
    android:textColor="@drawable/gaoliang"
    android:layout_height="wrap_content"
    android:layout_width="200sp"
    android:id="@+id/newPasswordText1"
    android:singleLine="true"
    android:hint="再次输入新密码"
    android:layout_marginRight="5sp"
    android:password="true"
    android:layout_below="@id/newPasswordText"
    android:layout_alignParentRight="true"
    android:background="@android:drawable/edit_text"
   />
<TextView 
    android:id="@+id/newpassword1"
    android:layout_width="200sp"
    android:layout_height="wrap_content"
    android:text="确认新密码："
    android:layout_marginLeft="10sp"
    android:textColor="@android:color/black"
    android:textSize="20dip"
    android:layout_alignTop="@id/newPasswordText1"
    android:paddingTop="7dip"
    android:layout_toLeftOf="@id/newPasswordText1"/>


<LinearLayout android:id="@+id/linearlayo"
    android:layout_height="50sp" 
    android:layout_width="fill_parent" 
    android:orientation="horizontal"
    android:layout_below="@id/newPasswordText1"
    >

<Button 
    android:layout_width="wrap_content" 
    android:layout_height="40sp" 
    android:text="@string/modifyCmt" 
    android:id="@+id/modifyCmt"
    android:layout_weight="1"
    android:layout_marginTop="5sp"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:textColor="@android:color/black"
    android:background="@drawable/selector1"
    >
</Button>

<Button 
    android:layout_width="wrap_content" 
    android:layout_height="40sp" 
    android:text="@string/modifyCancel" 
    android:id="@+id/modifyCancel"
    android:layout_weight="1"
    android:layout_marginTop="5sp"
    android:layout_marginRight="10sp"
    android:textColor="@android:color/black"
    android:background="@drawable/selector1"
    >
    
</Button>
  </LinearLayout>

</RelativeLayout>
